# My-Tools

.github/workflows/: build-Password-Management.yml  build-bill-insight.yml  build-quick-tools.yml
Bill-Insight/: .gitignore  README.md  angular.json  build_apk.sh  package-lock.json  package.json  run_dev_android.sh  run_dev_desktop.sh
Bill-Insight/docs/: template.xlsx
Bill-Insight/public/i18n/: en.json  vi.json
Bill-Insight/src/: index.html  styles.scss
Bill-Insight/src-tauri/: Cargo.toml  tauri.conf.json
Bill-Insight/src-tauri/capabilities/: default.json
Bill-Insight/src-tauri/icons/: icon.icns
Bill-Insight/src-tauri/src/: lib.rs
Bill-Insight/src-tauri/src/commands/: bhx_commands.rs  google_sheet_commands.rs  mod.rs
Bill-Insight/src-tauri/src/helpers/: mod.rs  number_helper.rs
Bill-Insight/src-tauri/src/models/: bach_hoa_xanh.rs  invoice_item.rs  mod.rs
Bill-Insight/src-tauri/src/services/: bach_hoa_xanh_service.rs  google_sheet_service.rs  mod.rs
Bill-Insight/src-tauri/src/states/: app_state.rs
Bill-Insight/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
Bill-Insight/src/app/core/enums/: file-names.ts  folder-names.ts  route-names.ts  setting-keys.ts
Bill-Insight/src/app/pages/add-invoice/: add-invoice.html  add-invoice.ts
Bill-Insight/src/app/pages/config/: config.html  config.ts
Bill-Insight/src/app/pages/config-details/: config-details.html  config-details.ts
Bill-Insight/src/app/pages/home/: home.html  home.ts
Bill-Insight/src/app/pages/list-invoices/: list-invoices.html  list-invoices.ts
Bill-Insight/src/app/pages/settings/: settings.html  settings.ts
Bill-Insight/src/app/shared/helpers/: app-folder.ts  route-navigation-helper.ts
Bill-Insight/src/app/shared/models/: response-command.ts  setting-model.ts  spreadsheet_config.ts
Bill-Insight/src/app/shared/services/: config-service.ts  dialog-service.ts  language-service.ts
Bill-Insight/src/app/shared/stores/: config-store.ts
Bill-Insight/test/: sheets4.rs
Password-Management/public/i18n/: en.json
Password-Management/src/: styles.css
Password-Management/src-tauri/src/commands/: google_sheet_commands.rs
Password-Management/src-tauri/src/helpers/: aes_helper.rs  mod.rs
Password-Management/src-tauri/src/models/: password.rs
Password-Management/src/app/: app.html
Password-Management/src/app/core/consts/: themes.const.ts
Password-Management/src/app/core/enums/: file-names.ts  folder-names.ts  setting-keys.ts
Password-Management/src/app/core/models/: account-model.ts  nav-item.ts  response-command.ts
Password-Management/src/app/shared/helpers/: app-folder.ts  file-helper.ts  spread-sheet-helper.ts  store-helper.ts
quick-tools/: README.md  angular.json  package-lock.json  package.json
quick-tools/public/i18n/: en.json
quick-tools/public/themes/: themes.json
quick-tools/src/: index.html  styles.css  styles.scss
quick-tools/src-tauri/: Cargo.toml  tauri.conf.json
quick-tools/src-tauri/capabilities/: default.json
quick-tools/src-tauri/i_love_img_upscale_img_lib/: Cargo.toml
quick-tools/src-tauri/i_love_img_upscale_img_lib/src/models/: iloveimg_upscale_img_model.rs  mod.rs
quick-tools/src-tauri/i_love_img_upscale_img_lib/src/services/: iloveimg_upscale_img_service.rs  mod.rs
quick-tools/src-tauri/icons/: icon.icns
quick-tools/src-tauri/ip_lib/: Cargo.toml
quick-tools/src-tauri/ip_lib/src/: lib.rs
quick-tools/src-tauri/ip_lib/src/models/: ip_address.rs  ip_address_info.rs  mod.rs
quick-tools/src-tauri/ip_lib/src/services/: ip_service.rs  mod.rs
quick-tools/src-tauri/src/: lib.rs
quick-tools/src-tauri/src/commands/: iloveimg_upscale_img_command.rs  ip_commands.rs  mod.rs  setup_commands.rs
quick-tools/src-tauri/src/models/: ip_model.rs  mod.rs
quick-tools/src-tauri/src/services/: iloveimg_upscale_img_service.rs  ip_service.rs  mod.rs
quick-tools/src-tauri/src/states/: app_state.rs
quick-tools/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
(+77 files in other folders)
