[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.9.1", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tokio = { version = "1.48.0", features = ["full"] }
tauri-plugin-fs = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }

reqwest_cookie_store = { version = "0.9", default-features = false }
roxmltree = "0.21.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
urlencoding = "2"
anyhow = "1"
chrono = "0.4"
tauri-plugin-store = "2"
