[workspace]
resolver = "3"

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-android-fs = { version = "23", features = ["legacy_storage_permission"] }
tauri-plugin-os = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "stream", "rustls-tls"] }
base64 = "0.22.1"
regex = "1.10"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
